les flows marchent de façon indépendantes

--- a/tests/notebooks/test.ipynb
+++ b/tests/notebooks/test.ipynb
@@ -1468,6 +1468,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x exist\n"
+     ]
+    }
+   ],
+   "source": [
+    "if not 'x' in locals(): \n",
+    "    x = 1\n",
+    "    print(x)\n",
+    "else :\n",
+    "    print('x exist')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
