--- a/tests/notebooks/test.ipynb
+++ b/tests/notebooks/test.ipynb
@@ -1489,6 +1489,93 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_flows(all:bool =False, subset:list=[\"1376\", \"453\"]):\n",
+    "    print(all,subset)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True ['1376', '453']\n"
+     ]
+    }
+   ],
+   "source": [
+    "run_flows(True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from prefect.artifacts import create_table_artifact\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function create_table_artifact in module prefect.artifacts:\n",
+      "\n",
+      "create_table_artifact(table: Union[Dict[str, List[Any]], List[Dict[str, Any]]], key: Optional[str] = None, description: Optional[str] = None) -> uuid.UUID\n",
+      "    Create a table artifact.\n",
+      "    \n",
+      "    Args:\n",
+      "        - table: The table to create.\n",
+      "    \n",
+      "    Returns:\n",
+      "        - The table artifact ID.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(create_table_artifact)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "| name   |   age |\n",
+      "|:-------|------:|\n",
+      "| Alice  |    25 |\n",
+      "| Bob    |    30 |\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame({'name': ['Alice', 'Bob', 'Charlie'], 'age': [25, 30, 35]})\n",
+    "\n",
+    "print(table)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
